#1 deleted unused elements and styles

--- a/index.html
+++ b/index.html
@@ -169,33 +169,23 @@
           <div class="form-container center" showValidation>
             <div class="container">
               <div class="col-md-12">
-                First Name:
-                <span class="glyphicon glyphicon-ok ok-check val-sign fName"></span>
-                <span class="glyphicon glyphicon-remove x-mark val-sign fName"></span><br>
+                First Name:<br>
                 <input type="text" ng-model="username" class="formInput" required>
               </div>
               <div class="col-md-12">
-                Last Name:
-                <span class="glyphicon glyphicon-ok ok-check val-sign lName"></span>
-                <span class="glyphicon glyphicon-remove x-mark val-sign lName"></span><br>
+                Last Name:<br>
                 <input type="text" ng-model="user.lastName" class="formInput" required>
               </div>
               <div class="col-md-12">
-                E-mail:
-                <span class="glyphicon glyphicon-ok ok-check val-sign userEmail"></span>
-                <span class="glyphicon glyphicon-remove x-mark val-sign userEmail"></span><br>
+                E-mail:<br>
                 <input type="email" ng-model="user.email" class="formInput" required>
               </div>
               <div class="col-md-12">
-                Password:
-                <span class="glyphicon glyphicon-ok ok-check val-sign userPass"></span>
-                <span class="glyphicon glyphicon-remove x-mark val-sign userPass"></span><br>
+                Password:<br>
                 <input type="password" ng-model="user.password" class="formInput" required>
               </div>
               <div class="col-md-12">
-                Re<span class="letter-spacing"></span>-Type Password:
-                <span class="glyphicon glyphicon-ok ok-check val-sign userRePass"></span>
-                <span class="glyphicon glyphicon-remove x-mark val-sign userRePass"></span><br>
+                Re<span class="letter-spacing"></span>-Type Password:<br>
                 <input type="password" ng-model="user.reTypePassword" class="formInput" required>
               </div>
               <div class="col-md-12">
