--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="myApp">
   <head>
+    <!-- bower:css -->
+    <!-- endbower -->git
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>maestro! | music you love</title>
@@ -221,5 +223,7 @@
     <script src="animation.js"></script>
     <script src="validation.js"></script>
     <script src="playlist.js"></script>
+    <!-- bower:js -->
+    <!-- endbower -->
   </body>
 </html>
