--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="myApp">
   <head>
     <!-- bower:css -->
-    <!-- endbower -->git
+    <!-- endbower -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>maestro! | music you love</title>
